--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -19,7 +19,7 @@
 
     section#login{
         width: 90vw;
-        
+        height: 320px; 
 
     }
 
@@ -55,7 +55,7 @@
 
     section#login{
         width: 950px;
-
+        height: 350px;
     }
 
     div#imagem{
